whitespace and comment fixes

--- a/src/cf-forms.less
+++ b/src/cf-forms.less
@@ -104,6 +104,9 @@
     - name: Error state
       codenotes:
         - .error
+      notes:
+        - "See the 'Form icons' section below for guidance on adding icons to
+           states."
       markup: |
         <input class="error" type="text" value="Invalid input" title="Test input">
     - name: Warning state
